# vehicle-detailing

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
assign-detailer-service/: Cargo.toml  Dockerfile
assign-detailer-service/.sqlx/: query-21fb7366ac08781d63a90a235417b83fd0b7c516987e3cfd9611b62aee6d80ae.json
assign-detailer-service/migrations/: 20260319044050_test_db.sql
assign-detailer-service/src/: assign_detailer.rs  consumer.rs  errors.rs  kafka_producer.rs  lib.rs  main.rs
assign-detailer-service/tests/: integration_tests.rs
assign-detailer-service/tests/common/: mod.rs  test_db.rs
auth-service/: Cargo.toml  Dockerfile
auth-service/.sqlx/: query-078f5cf43750a90610760e6b3c4d32b2c0538f7f87d4d42d0c0deaf7958655a1.json  query-0c44bed28343373f3d49b1cb70811639a71fa0fcda7d5d553c73db1b9d547b22.json  query-435f50d8775b005bdb7bc4890dfea669d2515920f196dcb2fb731470000b8f9e.json  query-4560c237741ce9d4166aecd669770b3360a3ac71e649b293efb88d92c3254068.json  query-a02e94a0b439bc598dfb29187c9127093449ac32f32bf3cfe9de4ecd3012c29b.json  query-a72ba1fae33939cddff4bb6333235c5ae35e1af2fc0779f9e1cb7ca196245b33.json  query-a908f751b1b5020ecf06738937af205554828600f265c8a9536633635c61de55.json  query-b4f54bb618d02d3cbbf876ccde02ab1e9f33dd1abce9c8bc14115282ed84850b.json  query-ba4e6dd895ce7e9d94c948af28b274801d4d4b9c4872490e53d3bab8b65c380f.json  query-d8eec0347bfceff98f8540eda4dd0fabcf2a92d8afca2e368dc17dda2ff4a6ce.json  query-e44a9cec92f7b32e54dfab28644349ef7fa65a2c8e88aba4deac0063b07d8a39.json  query-e650253ff00bd010c522aae3852d84afb13dca6dcf5bf80d83f92c4b5fe14927.json
auth-service/migrations/: 20260320004214_test_db.sql
auth-service/src/: main.rs  models.rs
auth-service/src/handlers/: auth.rs
auth-service/src/services/: auth.rs  kafka_producer.rs  mod.rs
auth-service/src/utils/: error.rs  jwt.rs
auth-service/tests/: integration_tests.rs
auth-service/tests/common/: test_db.rs
booking-service/: Cargo.toml  Dockerfile  build.rs
booking-service/.sqlx/: query-092834fd89d3bff2dee39a4eb20c3b853ff28909483b1232706e6eeb4207b1c9.json  query-1c509c53b4173ea610956bfec630d6d063e1fa1100d664a5f0d924d576696989.json  query-2254ac1206d0817cb20e452346bb860398bab063dd98e6a605ad03d269c6bdc5.json  query-35bd36e626e809642cfa0da9db6b66b24ecb6b47607c9dd19ed07902db8f4a16.json  query-3f6ff5d62615db5a4e9cce48c27a99aade2c38763d44daf604f9318083339381.json  query-4203e38480fdd34bc39fbab56d9e975fb0a192859db3c8612a7832843c2adba3.json  query-63f5f1ecdedcfcaab6918df43a65ab6593356117c8cd49b31e8500003c46a004.json  query-6d197878e999807ad51d89ef84ec37374c562aebbdc55fa07a127829529ebb58.json  query-a9edbd2d2e7974cfe492cef08d1741c1619d30beb540dbf9ecddff0b2fb38691.json  query-b91941342acaaade3a1f490b8ba23dd30aae7b59968ea460ec1f5e9e9f5836d2.json  query-c71327ff2200d077c35185895ed6a98c0982016f6c81fa726ec9a1fdddaeb02f.json  query-d15e9bc8d908438ad3c14b7953c8cfe8b63c8caccb570658f8c8286cdac97b28.json  query-dfa9514d37241adac378e608e7ee045455a1c0faa9c5c3c72529a451d5b1086f.json  query-e67f2553800cf365b5ac8001ef115214252c7a9403f1a81714bd3f5163e0f3cf.json
booking-service/migrations/: 20260320035210_test_db.sql
booking-service/src/: lib.rs  main.rs  state.rs
booking-service/src/handlers/: booking.rs
booking-service/src/middleware/: auth_user.rs
booking-service/src/proto/: mod.rs
booking-service/src/services/: booking.rs  consumer.rs  kafka_producer.rs  metrics.rs  mod.rs
booking-service/src/utils/: error.rs  mod.rs  models.rs
booking-service/tests/: integration_tests.rs
booking-service/tests/common/: mod.rs  test_db.rs
email-service/: Cargo.toml  Dockerfile
email-service/src/: consumer.rs  mailer.rs  main.rs
migrations/: 20260227164156_create_tables.sql
notification-service/: Cargo.toml  Dockerfile
notification-service/.sqlx/: query-0bab3ca967a35a83b82ab6c7959d0cf41796964346e0ce7f204d339d6882f0a7.json  query-28881ad23b8b28cd8dff0e9f42a2ef6fe9b00d0fd2922ea53ca0cf3329861710.json  query-5e6c158221637e414f311f90889eb815c81776795f840273d1f484e6e85454c8.json
notification-service/src/: consumer.rs  errors.rs  handler.rs  main.rs  services.rs  state.rs  util.rs
notification-service/src/middleware/: auth_user.rs  mod.rs  rate_limiting.rs
pricing-service/: Cargo.toml  Dockerfile  build.rs
pricing-service/src/: lib.rs  main.rs
pricing-service/tests/: integration_tests.rs
proto/: pricing.proto
shared-auth/: Cargo.toml
shared-auth/src/: jwt.rs  lib.rs  models.rs
tracking-service/: Cargo.toml  Dockerfile
tracking-service/.sqlx/: query-026c404e256d979a0ae4e21d3dcbe64d8749b325bdd6b933c56852eb5fbc17ae.json  query-4e312f0408c2f7272cd173e816489467262087beb3bffc2fbf9cd2ac1b51f76c.json  query-c84e7908023f6ab34cda390b99010591c2e7cc10b8a189e17aa78b09e135187e.json  query-c8a70ebdd0f6c782cf55c40645aa7d2de114d904483bb3c1fc4452651db7db15.json
tracking-service/migrations/: 20260330100554_test_db.sql
tracking-service/src/: main.rs  state.rs
tracking-service/src/handlers/: tracking.rs
tracking-service/src/middleware/: auth_user.rs
tracking-service/src/services/: consumer.rs  kafka_producer.rs  metrics.rs  mod.rs  tracking.rs
tracking-service/src/utils/: errors.rs  models.rs
tracking-service/tests/: integration_tests.rs
