[package]
name = "assign-detailer-service"
version = "0.1.0"
edition = "2024"

[dependencies]
shared-auth = { path = "../shared-auth" }
rdkafka = { version = "0.36", features = ["tokio"] }
futures = "0.3.32"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "bigdecimal", "postgres", "macros", "uuid", "chrono"] }
dotenvy = "0.15.7"
tokio = { version = "1.49", features = ["full"] }
axum = { version = "0.8.8", features = ["macros"] }
thiserror = "2.0.18"
chrono = { version = "0.4.44", features = ["serde"] }