[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = { version = "0.8.8", features = ["ws", "macros"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
dotenvy = "0.15.7"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
validator = { version = "0.20.0", features = ["derive"] }
tokio = { version = "1.49", features = ["full"] }
argon2 = "0.5.3"
thiserror = "2.0.18"
serde_json = "1.0.149"
rand = "0.10.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
rdkafka = { version = "0.36", features = ["tokio"] }
shared-auth = { path = "../shared-auth" }
anyhow = "1.0.102"
prometheus = "0.14.0"
lazy_static = "1.5.0"