[package]
name = "booking-service"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = { version = "0.8.8", features = ["ws", "macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
rdkafka = { version = "0.36", features = ["tokio"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
dotenvy = "0.15.7"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "bigdecimal", "postgres", "macros", "uuid", "chrono"] }
tokio = { version = "1.49", features = ["full"] }
thiserror = "2.0.18"
serde_json = "1.0.149"
tonic = "0.11"
prost = "0.12"
bigdecimal = "0.4"
shared-auth = { path = "../shared-auth" }
futures = "0.3.32"
anyhow = "1.0.102"
redis = { version = "1.0.3", features = ["aio", "connection-manager", "tokio-comp"] }
prometheus = "0.14.0"
lazy_static = "1.5.0"

[build-dependencies]
tonic-build = "0.11"    