[package]
name = "notification-service"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
redis = { version = "1.0.3", features = ["aio", "connection-manager", "tokio-comp"] }
axum = { version = "0.8.8", features = ["ws", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "bigdecimal", "postgres", "macros", "uuid", "chrono"] }
tokio = { version = "1.49", features = ["full"] }
futures = "0.3.32"
serde_json = "1.0.149"
dotenvy = "0.15.7"
shared-auth = { path = "../shared-auth" }
yup-oauth2 = "12.1.2"
rdkafka = { version = "0.36", features = ["tokio"] }
reqwest =  { version = "0.13.2", features = ["json"] } 
anyhow = "1.0.102"
thiserror = "2.0.18"
axum-extra = { version = "0.12.5", features = ["typed-header"] }