[package]
name = "pricing-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50", features = ["full"] }
tonic = "0.11"
prost = "0.12"
rdkafka = { version = "0.36", features = ["cmake-build"] }
serde_json = "1"
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
anyhow = "1.0.102"

[build-dependencies]
tonic-build = "0.11"