[package]
name = "shared-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4.44", features = ["serde"] }