[package]
name = "tracking-service"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "1.0.3", features = ["aio", "connection-manager", "tokio-comp"] }
dashmap = "6.1.0"
axum = { version = "0.8.8", features = ["ws", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "bigdecimal", "postgres", "macros", "uuid", "chrono"] }
tokio = { version = "1.49", features = ["full"] }
futures = "0.3.32"
serde_json = "1.0.149"
bytes = "1"
dotenvy = "0.15.7"
shared-auth = { path = "../shared-auth" }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
rdkafka = { version = "0.36", features = ["tokio"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
prometheus = "0.14.0"
lazy_static = "1.5.0"
url = "2.5.8"